--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="./data/pic/Captain_Chen/2.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="./data/pic/Captain_Chen/1.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -39,7 +39,8 @@
 						</header>
 						<div class="content">
 							<p><strong>本站没有任何恶意</strong>;这仅仅是某届学生献给母校以及各教职工的一份礼物而已，以此纪念流逝的高中生活</p>
-							<span class="image main"><img src="./data/pic/Captain_Chen/1.jpg" alt=""  /></span>
+						<br>	<p>另外，本项目GitHub上开源：</p><a href=https://github.com/Sl-CaptainChen/Captain_Chen/>Sl-CaptainChen\Captain_Chen</a>,欢迎前来Star!</p>
+							<span class="image main"><img src="./data/pic/Captain_Chen/2.jpg" alt=""  /></span>
 						</div>
 					</section>
 
